envoy-config/envoy-lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000
      protocol: TCP
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        access_log:
        - name: envoy.access_loggers.file
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            path: /dev/stdout
        http_filters:
        - name: envoy.filters.http.router
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        route_config:
          name: local_route
          virtual_hosts:
          - domains:
            - tenanta.example.com
            name: tenanta
            routes:
            - match:
                prefix: /
              route:
                cluster: tenanta_oidc_proxy
          - domains:
            - tenantb.example.com
            name: tenantb
            routes:
            - match:
                prefix: /
              route:
                cluster: tenantb_oidc_proxy
        server_header_transformation: PASS_THROUGH
        stat_prefix: ingress_http
  name: listener_0
  drain_type: DEFAULT
